docs: howtogit point 4 change

--- a/howtogit.ipynb
+++ b/howtogit.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Да, этот формат будет работать в VS Code, потому что я не знаю, как заставить его работать в других приложениях. \n",
     "\n",
-    "###### 1. Клонируем репозиторий\n",
+    "##### 1. Клонируем репозиторий\n",
     "\n",
     "Сначала нужно создать локальную копию репозитория. Сначала создайте пустую папку которую вы отроете в VSC, удостоверьесь что в VSC вы подлюченны к своему github аккаунту. \n",
     "\n",
@@ -28,13 +28,13 @@
     "\n",
     "Название ветки пусть отражает вашу задачу или исправление, ну или хоть папку которую вы меняете. (your-feature-branch - имя которое вы подбираете именно вашему бранчу) \n",
     "\n",
-    "###### 3. Вносим изменения\n",
+    "##### 3. Вносим изменения\n",
     "\n",
     "Редактируйте, добавляйте или удаляйте файлы.\n",
     "\n",
-    "###### 4. Сохраняем изменения (commit)\n",
+    "##### 4. Сохраняем изменения (commit)\n",
     "\n",
-    "Сначала добавим файлы в staging:\n",
+    "Сначала добавим файлы в staging (можно тоже сделать это плюсиком в части source control vsc): \n",
     "\n",
     "```bash\n",
     "git add .\n",
@@ -47,7 +47,7 @@
     "\n",
     "Всегда **описывайте, что вы коммитите**, чтобы мы все понимали цель изменений.\n",
     "\n",
-    "###### 5. Отправляем ветку на GitHub\n",
+    "##### 5. Отправляем ветку на GitHub\n",
     "\n",
     "```bash\n",
     "git push origin your-feature-branch\n",
